# blues

./: Cargo.toml
lib/: prelude.blues
src/: ast.rs  blues.pest  lib.rs  parser.rs
tests/spec/: should_succeed.rs
tests/spec/basic/: colormap.blues  lists.blues
tests/spec/syntax/: stlc.blues
