[package]
name = "blues"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
smol_str = "0.1"
moniker = "*"
bit-matrix = "*"
ena = "*"

[dependencies.annotate-snippets]
version = "0.6"
features = ["color"]

[dependencies.wrapterm]
git = "https://github.com/suhr/wrapterm.git"
